[gd_scene load_steps=3 format=3 uid="uid://piv1lxcidn51"]

[ext_resource type="Script" uid="uid://cifx4vukq3bd7" path="res://sound/audio_manager.gd" id="1_dqtri"]
[ext_resource type="AudioStream" uid="uid://cou2o5kqpkbsm" path="res://sound/music/test/Bliss Gone.ogg" id="2_jhm12"]

[node name="Audio" type="Node"]
process_mode = 3
script = ExtResource("1_dqtri")

[node name="Music" type="Node" parent="."]

[node name="MusStream" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_jhm12")
autoplay = true
bus = &"Music"

[node name="SFX" type="Node" parent="."]

[node name="Stream_1" type="AudioStreamPlayer2D" parent="SFX"]
max_distance = 1350.0
attenuation = 0.25
bus = &"SFX"
area_mask = 0

[node name="Stream_2" type="AudioStreamPlayer2D" parent="SFX"]
max_distance = 1350.0
attenuation = 0.25
bus = &"SFX"
area_mask = 0

[node name="Stream_3" type="AudioStreamPlayer2D" parent="SFX"]
max_distance = 1350.0
attenuation = 0.25
bus = &"SFX"
area_mask = 0

[node name="Stream_4" type="AudioStreamPlayer2D" parent="SFX"]
max_distance = 1350.0
attenuation = 0.25
bus = &"SFX"
area_mask = 0
